# mxcli-llms

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: rebuild.yml
scripts/: build.py
skills/mxcli/: SKILL.md
tests/: test_parse.py
tests/fixtures/: print_minimal.html  toc_minimal.html
